--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "primeicons": "^7.0.0",
+    "primevue": "^3.27.3",
     "vue": "^3.4.37"
   },
   "devDependencies": {
