--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   },
   "dependencies": {
     "primeicons": "^7.0.0",
-    "primevue": "^3.27.3",
-    "vue": "^3.4.37"
+    "primevue": "^3.53.0",
+    "vue": "^3.4.37",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
